# statpy

./: .gitignore  LICENSE  README.md  __init__.py  build_compile_wheel.sh  editable_install.sh  generate_version.py.in  install.sh  meson.build  pyproject.toml  setup.py
fitting/: fitter.py  levenberg_marquardt.py
qcd/: __init__.py
src/statpy/: __init__.py  log.py  meson.build
src/statpy/algorithms/markov/: __init__.py  hmc.py
src/statpy/database/: __init__.py  core.py  create.py  custom_json.py  io.py  leafs.py
src/statpy/fitting/: __init__.py  core.py  levenberg_marquardt.py
src/statpy/qcd/: __init__.py  correlator.py  scale_setting.py
src/statpy/statistics/: __init__.py  auto.py  bootstrap.py  core.py  jackknife.py
statistics/: autocorrelation.py  binning.py  jackknife.py
statpy/: __init__.py
statpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
statpy/algorithms/: __init__.py
statpy/dbpy/: __init__.py  core.py  create.py  custom_json.py  io.py  leafs.py  np_json.py
statpy/fitting/: __init__.py  core.py  fitter.py  fitting.py  levenberg_marquardt.py
statpy/qcd/: __init__.py  correlator.py  scale_setting.py  spectroscopy.py
statpy/statistics/: __init__.py  auto.py  autocorrelation.py  binning.py  bootstrap.py  core.py  jackknife.py  statistics.py
