[project]
name="statpy"
authors = [
    {name="Sebastian Spiegel", email="sebastian.spiegel@physik.uni-regensburg.de"}
]
description = "Database system with statistics library for Lattice QCD simulations"
requires-python=">=3.11"
readme="README.md"
dependencies=["numpy", "scipy", "iminuit", "dill", "frozendict", "numba"]

version="0.1"

[project.urls]
repository="https://github.com/spieseba/statpy"
homepage="https://github.com/spieseba/statpy"

[build-system]
requires = ["meson", "toml", "ninja", "meson-python"]
build-backend = 'mesonpy'
