[project]
name="statpy"
authors = [
    {name="Sebastian Spiegel", email="sebastian.spiegel@physik.uni-regensburg.de"}
]
description = "Database system with statistics library for Lattice QCD simulations"
requires-python=">=3.11"
readme="README.md"
dependencies=["numpy", "scipy", "iminuit", "dill", "frozendict", "numba"]

[tool.setuptools]
version = "{major}.{minor}.{patch}" 
version_format = "{tag} ({full_version})" 
local_scheme = "git"

[project.urls]
repository="https://github.com/spieseba/statpy"
homepage="https://github.com/spieseba/statpy"

[build-system]
requires = ["meson", "toml", "ninja", "meson-python"]
build-backend = 'mesonpy'