[project]
name="statpy"
dynamic = ["version"] 
description = "Database system with statistics library for Lattice QCD simulations"
readme="README.md"
requires-python=">=3.11"
authors = [
    {name="Sebastian Spiegel", email="sebastian.spiegel@physik.uni-regensburg.de"}
]
dependencies=["numpy", "scipy", "iminuit", "dill", "frozendict", "numba"]

[build-system]
build-backend = 'mesonpy'
requires = ["meson-python", "ninja"]
