python.install_sources(
  '__init__.py',
  pure: true,
  subdir: 'statpy'
)

python.install_sources(
  'algorithms/__init__.py',
  pure: true,
  subdir: 'statpy/algorithms'
)

python.install_sources(
  'algorithms/markov/__init__.py', 'algorithms/markov/hmc.py',
  pure: true,
  subdir: 'statpy/algorithms/markov'
)

python.install_sources(
  'database/__init__.py', 'database/core.py', 'database/create.py', 'database/custom_json.py', 'database/io.py', 'database/leafs.py',
  pure: true,
  subdir: 'statpy/database'
)

python.install_sources(
  'fitting/__init__.py', 'fitting/core.py', 'fitting/levenberg_marquardt.py',
  pure: true,
  subdir: 'statpy/fitting'
)

python.install_sources(
  'qcd/__init__.py', 'qcd/correlator.py', 'qcd/scale_setting.py',
  pure: true,
  subdir: 'statpy/qcd'
)

python.install_sources(
  'statistics/__init__.py', 'statistics/auto.py', 'statistics/bootstrap.py', 'statistics/core.py', 'statistics/jackknife.py',
  pure: true,
  subdir: 'statpy/statistics'
)

